...
                            <constraint firstItem="mlM-PW-8tO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="VsU-KL-wzL"/>
                            <constraint firstItem="mlM-PW-8tO" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="vEn-wW-TfW"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" id="UY7-KO-c8i">
                        <barButtonItem key="rightBarButtonItem" title="Sort Items" id="KXN-no-WKg">
                            <connections>
                                <action selector="sortBTNPressed:" destination="BYZ-38-t0r" id="hn7-9f-R8N"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
